<resources>
    <string name="app_name">Tile Flippers</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="blank" />
    <string name="btn_lbl_OK">OK</string>
    <string name="lbl_hnt_code">Level Code</string>
    <string name="btn_lbl_download">Download</string>
    <string name="btn_lbl_back">Back</string>
    <string name="btn_lbl_play">Play</string>
    <string name="btn_lbl_tutorial">Instructions</string>
    <string name="btn_lbl_start">Start</string>
    <string name="btn_lbl_scores">Scores</string>
    <string name="btn_lbl_erasescores">Erase Scores</string>
    <string name="lbl_select">Select a Level</string>
    <string name="btn_lbl_downloadlvl">Download Level</string>
    <string name="lvl_1">1</string>
    <string name="lvl_2">2</string>
    <string name="lvl_3">3</string>
    <string name="restlt1">Level Completed in </string>
    <string name="result2">turns!</string>
    <string name="noscre">No scores available for this level</string>
    <string name="turnlbl">Turns:</string>
    <string name="lvl_demo">Ex: ZNaNSMU</string>
    <string name="close">Close</string>
    <string name="press_download">Press the download button, and if it succeeds you\'ll be able to press play!</string>
    <string name="code_example">Copy this part of the url to use as a download code: ZNaNSMU</string>
    <string name="url_example">The image url will look something like this: https://imgur.com/ZNaNSMU</string>
    <string name="image_details">Upload your level onto imgur. Make sure you save its as a 50x110 png.</string>
    <string name="uploading_a_level">Uploading a Level</string>
    <string name="downloading_a_level">Downloading a Level</string>
    <string name="next">Next</string>
    <string name="create_your_own_level">You can create your own level by creating and uploading an image!</string>
    <string name="template_link">Use this image as a template: https://i.imgur.com/ZNaNSMU.png</string>
    <string name="image_functionality">The top half of the image represents the pattern required to beat the level. (White means the tile won\'t matter)</string>
    <string name="creating_a_level_image">Creating a Level Image</string>
    <string name="image_functionality2">The bottom half represents the starting panel layout. It can be any combination of orange and blue.</string>
    <string name="help">Help</string>
    <string name="lvl_4">4</string>
    <string name="lvl_5">5</string>
    <string name="lvl_6">6</string>
    <string name="lvl_7">7</string>
    <string name="lvl_8">8</string>

    <string-array name = "Levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
