<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diamond_background_gradient_white">

    <Button
        android:id="@+id/Btnstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Btnscores"
        android:layout_centerHorizontal="true"
        android:onClick="startLevel"
        android:text="@string/btn_lbl_start"
        android:background="@drawable/buttonnew"/>

    <Button
        android:id="@+id/Btnscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Btnback"
        android:layout_alignLeft="@+id/Btnstart"
        android:layout_alignStart="@+id/Btnstart"
        android:onClick="viewScores"
        android:text="@string/btn_lbl_scores"
        android:background="@drawable/buttonnew"/>

    <Button
        android:id="@+id/Btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Btnscores"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/Btnscores"
        android:onClick="cancelSelect"
        android:text="@string/btn_lbl_back"
        android:background="@drawable/buttonnew"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        app:srcCompat="@mipmap/ic_launcher_round" />
</RelativeLayout>